// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`object fields additionalProperties 1`] = `
.emotion-2 {
  display: grid;
  gap: var(--chakra-spacing-6);
  margin-bottom: var(--chakra-spacing-4);
}

.emotion-4 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--chakra-spacing-2);
}

.emotion-8 {
  margin-bottom: var(--chakra-spacing-1);
}

.emotion-12 {
  margin-bottom: var(--chakra-spacing-1);
}

.emotion-16 {
  padding-inline: 0;
  padding-block: 0;
}

.emotion-16 :where(svg) {
  font-size: 1.2em;
}

.emotion-17 {
  justify-self: flex-end;
}

.emotion-19 {
  margin-top: var(--chakra-spacing-3);
}

<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <fieldset
      className="fieldset__root emotion-0"
      data-part="root"
      data-scope="fieldset"
      disabled={false}
    >
      <div
        className="fieldset__content emotion-1"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="form-group field field-string emotion-4"
            >
              <div
                className="emotion-3"
              >
                <div
                  className="chakra-field__root emotion-6"
                  data-part="root"
                  data-scope="field"
                  id="field:::r6:"
                  role="group"
                >
                  <label
                    className="chakra-field__label emotion-7"
                    data-part="label"
                    data-scope="field"
                    htmlFor=":r6:"
                    id="field:::r6:::label"
                  >
                    foo Key
                  </label>
                  <input
                    className="chakra-input emotion-8"
                    data-part="input"
                    data-scope="field"
                    defaultValue="foo"
                    disabled={false}
                    id="root_foo-key"
                    name="root_foo-key"
                    onBlur={[Function]}
                    readOnly={false}
                    required={false}
                    type="text"
                  />
                </div>
              </div>
              <div
                className="emotion-3"
              >
                <fieldset
                  className="fieldset__root emotion-0"
                  data-part="root"
                  data-scope="fieldset"
                  disabled={false}
                >
                  <div
                    className="fieldset__content emotion-1"
                  >
                    <div
                      className="chakra-field__root emotion-12"
                      data-part="root"
                      data-scope="field"
                      id="field:::r8:"
                      role="group"
                    >
                      <label
                        className="chakra-field__label emotion-7"
                        data-part="label"
                        data-scope="field"
                        htmlFor=":r8:"
                        id="field:::r8:::label"
                      >
                        foo
                      </label>
                      <input
                        aria-describedby="root_foo__error root_foo__description root_foo__help"
                        autoFocus={false}
                        className="chakra-input emotion-14"
                        data-part="input"
                        data-scope="field"
                        disabled={false}
                        id="root_foo"
                        name="root_foo"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder=""
                        readOnly={false}
                        required={false}
                        type="text"
                        value="foo"
                      />
                    </div>
                  </div>
                </fieldset>
              </div>
              <div
                className="emotion-3"
              >
                <button
                  aria-label="Remove"
                  className="chakra-button array-item-remove emotion-16"
                  disabled={false}
                  id="root_foo__remove"
                  onClick={[Function]}
                  title="Remove"
                  type="button"
                >
                  <svg
                    className="lucide lucide-delete"
                    fill="none"
                    height={24}
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={2}
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10 5a2 2 0 0 0-1.344.519l-6.328 5.74a1 1 0 0 0 0 1.481l6.328 5.741A2 2 0 0 0 10 19h10a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2z"
                    />
                    <path
                      d="m12 9 6 6"
                    />
                    <path
                      d="m18 9-6 6"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            className="emotion-17"
          >
            <button
              className="chakra-button object-property-expand emotion-18"
              disabled={false}
              id="root__add"
              onClick={[Function]}
              type="button"
            >
              <svg
                className="lucide lucide-plus"
                fill="none"
                height={24}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={2}
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
              Add Item
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
  <div
    className="emotion-19"
  >
    <button
      className="chakra-button emotion-18"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`object fields object 1`] = `
.emotion-2 {
  display: grid;
  gap: var(--chakra-spacing-6);
  margin-bottom: var(--chakra-spacing-4);
}

.emotion-6 {
  margin-bottom: var(--chakra-spacing-1);
}

.emotion-15 {
  margin-top: var(--chakra-spacing-3);
}

<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <fieldset
      className="fieldset__root emotion-0"
      data-part="root"
      data-scope="fieldset"
      disabled={false}
    >
      <div
        className="fieldset__content emotion-1"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="form-group field field-string"
            >
              <fieldset
                className="fieldset__root emotion-0"
                data-part="root"
                data-scope="fieldset"
                disabled={false}
              >
                <div
                  className="fieldset__content emotion-1"
                >
                  <div
                    className="chakra-field__root emotion-6"
                    data-part="root"
                    data-scope="field"
                    id="field:::r2:"
                    role="group"
                  >
                    <label
                      className="chakra-field__label emotion-7"
                      data-part="label"
                      data-scope="field"
                      htmlFor=":r2:"
                      id="field:::r2:::label"
                    >
                      A
                    </label>
                    <input
                      aria-describedby="root_a__error root_a__description root_a__help"
                      autoFocus={false}
                      className="chakra-input emotion-8"
                      data-part="input"
                      data-scope="field"
                      disabled={false}
                      id="root_a"
                      name="root_a"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      readOnly={false}
                      required={false}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </fieldset>
            </div>
          </div>
          <div
            className="emotion-3"
          >
            <div
              className="form-group field field-number"
            >
              <fieldset
                className="fieldset__root emotion-0"
                data-part="root"
                data-scope="fieldset"
                disabled={false}
              >
                <div
                  className="fieldset__content emotion-1"
                >
                  <div
                    className="chakra-field__root emotion-6"
                    data-part="root"
                    data-scope="field"
                    id="field:::r4:"
                    role="group"
                  >
                    <label
                      className="chakra-field__label emotion-7"
                      data-part="label"
                      data-scope="field"
                      htmlFor=":r4:"
                      id="field:::r4:::label"
                    >
                      B
                    </label>
                    <input
                      aria-describedby="root_b__error root_b__description root_b__help"
                      autoFocus={false}
                      className="chakra-input emotion-8"
                      data-part="input"
                      data-scope="field"
                      disabled={false}
                      id="root_b"
                      name="root_b"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      readOnly={false}
                      required={false}
                      step="any"
                      type="number"
                      value=""
                    />
                  </div>
                </div>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
  <div
    className="emotion-15"
  >
    <button
      className="chakra-button emotion-16"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`object fields show add button and fields if additionalProperties is true and not an object 1`] = `
.emotion-2 {
  display: grid;
  gap: var(--chakra-spacing-6);
  margin-bottom: var(--chakra-spacing-4);
}

.emotion-4 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--chakra-spacing-2);
}

.emotion-8 {
  margin-bottom: var(--chakra-spacing-1);
}

.emotion-12 {
  margin-bottom: var(--chakra-spacing-1);
}

.emotion-16 {
  padding-inline: 0;
  padding-block: 0;
}

.emotion-16 :where(svg) {
  font-size: 1.2em;
}

.emotion-17 {
  justify-self: flex-end;
}

.emotion-19 {
  margin-top: var(--chakra-spacing-3);
}

<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <fieldset
      className="fieldset__root emotion-0"
      data-part="root"
      data-scope="fieldset"
      disabled={false}
    >
      <div
        className="fieldset__content emotion-1"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="form-group field field-string emotion-4"
            >
              <div
                className="emotion-3"
              >
                <div
                  className="chakra-field__root emotion-6"
                  data-part="root"
                  data-scope="field"
                  id="field:::ra:"
                  role="group"
                >
                  <label
                    className="chakra-field__label emotion-7"
                    data-part="label"
                    data-scope="field"
                    htmlFor=":ra:"
                    id="field:::ra:::label"
                  >
                    additionalProperty Key
                  </label>
                  <input
                    className="chakra-input emotion-8"
                    data-part="input"
                    data-scope="field"
                    defaultValue="additionalProperty"
                    disabled={false}
                    id="root_additionalProperty-key"
                    name="root_additionalProperty-key"
                    onBlur={[Function]}
                    readOnly={false}
                    required={false}
                    type="text"
                  />
                </div>
              </div>
              <div
                className="emotion-3"
              >
                <fieldset
                  className="fieldset__root emotion-0"
                  data-part="root"
                  data-scope="fieldset"
                  disabled={false}
                >
                  <div
                    className="fieldset__content emotion-1"
                  >
                    <div
                      className="chakra-field__root emotion-12"
                      data-part="root"
                      data-scope="field"
                      id="field:::rc:"
                      role="group"
                    >
                      <label
                        className="chakra-field__label emotion-7"
                        data-part="label"
                        data-scope="field"
                        htmlFor=":rc:"
                        id="field:::rc:::label"
                      >
                        additionalProperty
                      </label>
                      <input
                        aria-describedby="root_additionalProperty__error root_additionalProperty__description root_additionalProperty__help"
                        autoFocus={false}
                        className="chakra-input emotion-14"
                        data-part="input"
                        data-scope="field"
                        disabled={false}
                        id="root_additionalProperty"
                        name="root_additionalProperty"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder=""
                        readOnly={false}
                        required={false}
                        type="text"
                        value="should appear"
                      />
                    </div>
                  </div>
                </fieldset>
              </div>
              <div
                className="emotion-3"
              >
                <button
                  aria-label="Remove"
                  className="chakra-button array-item-remove emotion-16"
                  disabled={false}
                  id="root_additionalProperty__remove"
                  onClick={[Function]}
                  title="Remove"
                  type="button"
                >
                  <svg
                    className="lucide lucide-delete"
                    fill="none"
                    height={24}
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={2}
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10 5a2 2 0 0 0-1.344.519l-6.328 5.74a1 1 0 0 0 0 1.481l6.328 5.741A2 2 0 0 0 10 19h10a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2z"
                    />
                    <path
                      d="m12 9 6 6"
                    />
                    <path
                      d="m18 9-6 6"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            className="emotion-17"
          >
            <button
              className="chakra-button object-property-expand emotion-18"
              disabled={false}
              id="root__add"
              onClick={[Function]}
              type="button"
            >
              <svg
                className="lucide lucide-plus"
                fill="none"
                height={24}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={2}
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
              Add Item
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
  <div
    className="emotion-19"
  >
    <button
      className="chakra-button emotion-18"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`object fields with title and description additionalProperties 1`] = `
.emotion-2 {
  margin-top: var(--chakra-spacing-1);
  margin-bottom: var(--chakra-spacing-4);
}

.emotion-5 {
  font-size: var(--chakra-font-sizes-md);
}

.emotion-6 {
  display: grid;
  gap: var(--chakra-spacing-2);
  margin-bottom: var(--chakra-spacing-4);
}

.emotion-8 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--chakra-spacing-2);
}

.emotion-12 {
  margin-bottom: var(--chakra-spacing-1);
}

.emotion-16 {
  margin-bottom: var(--chakra-spacing-1);
}

.emotion-20 {
  padding-inline: 0;
  padding-block: 0;
}

.emotion-20 :where(svg) {
  font-size: 1.2em;
}

.emotion-21 {
  justify-self: flex-end;
}

.emotion-23 {
  margin-top: var(--chakra-spacing-3);
}

<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <fieldset
      className="fieldset__root emotion-0"
      data-part="root"
      data-scope="fieldset"
      disabled={false}
    >
      <div
        className="fieldset__content emotion-1"
      >
        <div
          className="emotion-2"
          id="root__title"
        >
          <h5
            className="chakra-heading emotion-3"
          >
            Test field
          </h5>
          <span
            aria-orientation="horizontal"
            className="chakra-separator emotion-4"
            role="separator"
          />
        </div>
        <sup
          className="emotion-5"
          id="root__description"
        >
          a test description
        </sup>
        <div
          className="emotion-6"
        >
          <div
            className="emotion-7"
          >
            <div
              className="form-group field field-string emotion-8"
            >
              <div
                className="emotion-7"
              >
                <div
                  className="chakra-field__root emotion-10"
                  data-part="root"
                  data-scope="field"
                  id="field:::rj:"
                  role="group"
                >
                  <label
                    className="chakra-field__label emotion-11"
                    data-part="label"
                    data-scope="field"
                    htmlFor=":rj:"
                    id="field:::rj:::label"
                  >
                    foo Key
                  </label>
                  <input
                    className="chakra-input emotion-12"
                    data-part="input"
                    data-scope="field"
                    defaultValue="foo"
                    disabled={false}
                    id="root_foo-key"
                    name="root_foo-key"
                    onBlur={[Function]}
                    readOnly={false}
                    required={false}
                    type="text"
                  />
                </div>
              </div>
              <div
                className="emotion-7"
              >
                <fieldset
                  className="fieldset__root emotion-0"
                  data-part="root"
                  data-scope="fieldset"
                  disabled={false}
                >
                  <div
                    className="fieldset__content emotion-1"
                  >
                    <div
                      className="chakra-field__root emotion-16"
                      data-part="root"
                      data-scope="field"
                      id="field:::rl:"
                      role="group"
                    >
                      <label
                        className="chakra-field__label emotion-11"
                        data-part="label"
                        data-scope="field"
                        htmlFor=":rl:"
                        id="field:::rl:::label"
                      >
                        foo
                      </label>
                      <input
                        aria-describedby="root_foo__error root_foo__description root_foo__help"
                        autoFocus={false}
                        className="chakra-input emotion-18"
                        data-part="input"
                        data-scope="field"
                        disabled={false}
                        id="root_foo"
                        name="root_foo"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder=""
                        readOnly={false}
                        required={false}
                        type="text"
                        value="foo"
                      />
                    </div>
                  </div>
                </fieldset>
              </div>
              <div
                className="emotion-7"
              >
                <button
                  aria-label="Remove"
                  className="chakra-button array-item-remove emotion-20"
                  disabled={false}
                  id="root_foo__remove"
                  onClick={[Function]}
                  title="Remove"
                  type="button"
                >
                  <svg
                    className="lucide lucide-delete"
                    fill="none"
                    height={24}
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={2}
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10 5a2 2 0 0 0-1.344.519l-6.328 5.74a1 1 0 0 0 0 1.481l6.328 5.741A2 2 0 0 0 10 19h10a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2z"
                    />
                    <path
                      d="m12 9 6 6"
                    />
                    <path
                      d="m18 9-6 6"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            className="emotion-21"
          >
            <button
              className="chakra-button object-property-expand emotion-22"
              disabled={false}
              id="root__add"
              onClick={[Function]}
              type="button"
            >
              <svg
                className="lucide lucide-plus"
                fill="none"
                height={24}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={2}
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
              Add Item
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
  <div
    className="emotion-23"
  >
    <button
      className="chakra-button emotion-22"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`object fields with title and description from both additionalProperties 1`] = `
.emotion-2 {
  margin-top: var(--chakra-spacing-1);
  margin-bottom: var(--chakra-spacing-4);
}

.emotion-5 {
  font-size: var(--chakra-font-sizes-md);
}

.emotion-6 {
  display: grid;
  gap: var(--chakra-spacing-2);
  margin-bottom: var(--chakra-spacing-4);
}

.emotion-8 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--chakra-spacing-2);
}

.emotion-12 {
  margin-bottom: var(--chakra-spacing-1);
}

.emotion-16 {
  margin-bottom: var(--chakra-spacing-1);
}

.emotion-20 {
  padding-inline: 0;
  padding-block: 0;
}

.emotion-20 :where(svg) {
  font-size: 1.2em;
}

.emotion-21 {
  justify-self: flex-end;
}

.emotion-23 {
  margin-top: var(--chakra-spacing-3);
}

<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <fieldset
      className="fieldset__root emotion-0"
      data-part="root"
      data-scope="fieldset"
      disabled={false}
    >
      <div
        className="fieldset__content emotion-1"
      >
        <div
          className="emotion-2"
          id="root__title"
        >
          <h5
            className="chakra-heading emotion-3"
          >
            My Field
          </h5>
          <span
            aria-orientation="horizontal"
            className="chakra-separator emotion-4"
            role="separator"
          />
        </div>
        <sup
          className="emotion-5"
          id="root__description"
        >
          a fancier description
        </sup>
        <div
          className="emotion-6"
        >
          <div
            className="emotion-7"
          >
            <div
              className="form-group field field-string emotion-8"
            >
              <div
                className="emotion-7"
              >
                <div
                  className="chakra-field__root emotion-10"
                  data-part="root"
                  data-scope="field"
                  id="field:::r1d:"
                  role="group"
                >
                  <label
                    className="chakra-field__label emotion-11"
                    data-part="label"
                    data-scope="field"
                    htmlFor=":r1d:"
                    id="field:::r1d:::label"
                  >
                    foo Key
                  </label>
                  <input
                    className="chakra-input emotion-12"
                    data-part="input"
                    data-scope="field"
                    defaultValue="foo"
                    disabled={false}
                    id="root_foo-key"
                    name="root_foo-key"
                    onBlur={[Function]}
                    readOnly={false}
                    required={false}
                    type="text"
                  />
                </div>
              </div>
              <div
                className="emotion-7"
              >
                <fieldset
                  className="fieldset__root emotion-0"
                  data-part="root"
                  data-scope="fieldset"
                  disabled={false}
                >
                  <div
                    className="fieldset__content emotion-1"
                  >
                    <div
                      className="chakra-field__root emotion-16"
                      data-part="root"
                      data-scope="field"
                      id="field:::r1f:"
                      role="group"
                    >
                      <label
                        className="chakra-field__label emotion-11"
                        data-part="label"
                        data-scope="field"
                        htmlFor=":r1f:"
                        id="field:::r1f:::label"
                      >
                        foo
                      </label>
                      <input
                        aria-describedby="root_foo__error root_foo__description root_foo__help"
                        autoFocus={false}
                        className="chakra-input emotion-18"
                        data-part="input"
                        data-scope="field"
                        disabled={false}
                        id="root_foo"
                        name="root_foo"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder=""
                        readOnly={false}
                        required={false}
                        type="text"
                        value="foo"
                      />
                    </div>
                  </div>
                </fieldset>
              </div>
              <div
                className="emotion-7"
              >
                <button
                  aria-label="Remove"
                  className="chakra-button array-item-remove emotion-20"
                  disabled={false}
                  id="root_foo__remove"
                  onClick={[Function]}
                  title="Remove"
                  type="button"
                >
                  <svg
                    className="lucide lucide-delete"
                    fill="none"
                    height={24}
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={2}
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10 5a2 2 0 0 0-1.344.519l-6.328 5.74a1 1 0 0 0 0 1.481l6.328 5.741A2 2 0 0 0 10 19h10a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2z"
                    />
                    <path
                      d="m12 9 6 6"
                    />
                    <path
                      d="m18 9-6 6"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            className="emotion-21"
          >
            <button
              className="chakra-button object-property-expand emotion-22"
              disabled={false}
              id="root__add"
              onClick={[Function]}
              type="button"
            >
              <svg
                className="lucide lucide-plus"
                fill="none"
                height={24}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={2}
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
              Add Item
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
  <div
    className="emotion-23"
  >
    <button
      className="chakra-button emotion-22"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`object fields with title and description from both object 1`] = `
.emotion-2 {
  margin-top: var(--chakra-spacing-1);
  margin-bottom: var(--chakra-spacing-4);
}

.emotion-5 {
  font-size: var(--chakra-font-sizes-md);
}

.emotion-6 {
  display: grid;
  gap: var(--chakra-spacing-2);
  margin-bottom: var(--chakra-spacing-4);
}

.emotion-9 {
  margin-top: var(--chakra-spacing-2);
}

.emotion-12 {
  margin-bottom: var(--chakra-spacing-1);
}

.emotion-23 {
  margin-top: var(--chakra-spacing-3);
}

<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <fieldset
      className="fieldset__root emotion-0"
      data-part="root"
      data-scope="fieldset"
      disabled={false}
    >
      <div
        className="fieldset__content emotion-1"
      >
        <div
          className="emotion-2"
          id="root__title"
        >
          <h5
            className="chakra-heading emotion-3"
          >
            My Field
          </h5>
          <span
            aria-orientation="horizontal"
            className="chakra-separator emotion-4"
            role="separator"
          />
        </div>
        <sup
          className="emotion-5"
          id="root__description"
        >
          a fancier description
        </sup>
        <div
          className="emotion-6"
        >
          <div
            className="emotion-7"
          >
            <div
              className="form-group field field-string"
            >
              <fieldset
                className="fieldset__root emotion-0"
                data-part="root"
                data-scope="fieldset"
                disabled={false}
              >
                <legend
                  className="fieldset__legend emotion-9"
                  data-part="legend"
                  data-scope="fieldset"
                >
                  <sup
                    className="emotion-5"
                    id="root_a__description"
                  >
                    a fancier item A description
                  </sup>
                </legend>
                <div
                  className="fieldset__content emotion-1"
                >
                  <div
                    className="chakra-field__root emotion-12"
                    data-part="root"
                    data-scope="field"
                    id="field:::r19:"
                    role="group"
                  >
                    <label
                      className="chakra-field__label emotion-13"
                      data-part="label"
                      data-scope="field"
                      htmlFor=":r19:"
                      id="field:::r19:::label"
                    >
                      My Item A
                    </label>
                    <input
                      aria-describedby="root_a__error root_a__description root_a__help"
                      autoFocus={false}
                      className="chakra-input emotion-14"
                      data-part="input"
                      data-scope="field"
                      disabled={false}
                      id="root_a"
                      name="root_a"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      readOnly={false}
                      required={false}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </fieldset>
            </div>
          </div>
          <div
            className="emotion-7"
          >
            <div
              className="form-group field field-number"
            >
              <fieldset
                className="fieldset__root emotion-0"
                data-part="root"
                data-scope="fieldset"
                disabled={false}
              >
                <legend
                  className="fieldset__legend emotion-9"
                  data-part="legend"
                  data-scope="fieldset"
                >
                  <sup
                    className="emotion-5"
                    id="root_b__description"
                  >
                    a fancier item B description
                  </sup>
                </legend>
                <div
                  className="fieldset__content emotion-1"
                >
                  <div
                    className="chakra-field__root emotion-12"
                    data-part="root"
                    data-scope="field"
                    id="field:::r1b:"
                    role="group"
                  >
                    <label
                      className="chakra-field__label emotion-13"
                      data-part="label"
                      data-scope="field"
                      htmlFor=":r1b:"
                      id="field:::r1b:::label"
                    >
                      My Item B
                    </label>
                    <input
                      aria-describedby="root_b__error root_b__description root_b__help"
                      autoFocus={false}
                      className="chakra-input emotion-14"
                      data-part="input"
                      data-scope="field"
                      disabled={false}
                      id="root_b"
                      name="root_b"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      readOnly={false}
                      required={false}
                      step="any"
                      type="number"
                      value=""
                    />
                  </div>
                </div>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
  <div
    className="emotion-23"
  >
    <button
      className="chakra-button emotion-24"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`object fields with title and description from uiSchema additionalProperties 1`] = `
.emotion-2 {
  margin-top: var(--chakra-spacing-1);
  margin-bottom: var(--chakra-spacing-4);
}

.emotion-5 {
  font-size: var(--chakra-font-sizes-md);
}

.emotion-6 {
  display: grid;
  gap: var(--chakra-spacing-2);
  margin-bottom: var(--chakra-spacing-4);
}

.emotion-8 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--chakra-spacing-2);
}

.emotion-12 {
  margin-bottom: var(--chakra-spacing-1);
}

.emotion-16 {
  margin-bottom: var(--chakra-spacing-1);
}

.emotion-20 {
  padding-inline: 0;
  padding-block: 0;
}

.emotion-20 :where(svg) {
  font-size: 1.2em;
}

.emotion-21 {
  justify-self: flex-end;
}

.emotion-23 {
  margin-top: var(--chakra-spacing-3);
}

<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <fieldset
      className="fieldset__root emotion-0"
      data-part="root"
      data-scope="fieldset"
      disabled={false}
    >
      <div
        className="fieldset__content emotion-1"
      >
        <div
          className="emotion-2"
          id="root__title"
        >
          <h5
            className="chakra-heading emotion-3"
          >
            My Field
          </h5>
          <span
            aria-orientation="horizontal"
            className="chakra-separator emotion-4"
            role="separator"
          />
        </div>
        <sup
          className="emotion-5"
          id="root__description"
        >
          a fancier description
        </sup>
        <div
          className="emotion-6"
        >
          <div
            className="emotion-7"
          >
            <div
              className="form-group field field-string emotion-8"
            >
              <div
                className="emotion-7"
              >
                <div
                  className="chakra-field__root emotion-10"
                  data-part="root"
                  data-scope="field"
                  id="field:::r10:"
                  role="group"
                >
                  <label
                    className="chakra-field__label emotion-11"
                    data-part="label"
                    data-scope="field"
                    htmlFor=":r10:"
                    id="field:::r10:::label"
                  >
                    foo Key
                  </label>
                  <input
                    className="chakra-input emotion-12"
                    data-part="input"
                    data-scope="field"
                    defaultValue="foo"
                    disabled={false}
                    id="root_foo-key"
                    name="root_foo-key"
                    onBlur={[Function]}
                    readOnly={false}
                    required={false}
                    type="text"
                  />
                </div>
              </div>
              <div
                className="emotion-7"
              >
                <fieldset
                  className="fieldset__root emotion-0"
                  data-part="root"
                  data-scope="fieldset"
                  disabled={false}
                >
                  <div
                    className="fieldset__content emotion-1"
                  >
                    <div
                      className="chakra-field__root emotion-16"
                      data-part="root"
                      data-scope="field"
                      id="field:::r12:"
                      role="group"
                    >
                      <label
                        className="chakra-field__label emotion-11"
                        data-part="label"
                        data-scope="field"
                        htmlFor=":r12:"
                        id="field:::r12:::label"
                      >
                        foo
                      </label>
                      <input
                        aria-describedby="root_foo__error root_foo__description root_foo__help"
                        autoFocus={false}
                        className="chakra-input emotion-18"
                        data-part="input"
                        data-scope="field"
                        disabled={false}
                        id="root_foo"
                        name="root_foo"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder=""
                        readOnly={false}
                        required={false}
                        type="text"
                        value="foo"
                      />
                    </div>
                  </div>
                </fieldset>
              </div>
              <div
                className="emotion-7"
              >
                <button
                  aria-label="Remove"
                  className="chakra-button array-item-remove emotion-20"
                  disabled={false}
                  id="root_foo__remove"
                  onClick={[Function]}
                  title="Remove"
                  type="button"
                >
                  <svg
                    className="lucide lucide-delete"
                    fill="none"
                    height={24}
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={2}
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10 5a2 2 0 0 0-1.344.519l-6.328 5.74a1 1 0 0 0 0 1.481l6.328 5.741A2 2 0 0 0 10 19h10a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2z"
                    />
                    <path
                      d="m12 9 6 6"
                    />
                    <path
                      d="m18 9-6 6"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            className="emotion-21"
          >
            <button
              className="chakra-button object-property-expand emotion-22"
              disabled={false}
              id="root__add"
              onClick={[Function]}
              type="button"
            >
              <svg
                className="lucide lucide-plus"
                fill="none"
                height={24}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={2}
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
              Add Item
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
  <div
    className="emotion-23"
  >
    <button
      className="chakra-button emotion-22"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`object fields with title and description from uiSchema object 1`] = `
.emotion-2 {
  margin-top: var(--chakra-spacing-1);
  margin-bottom: var(--chakra-spacing-4);
}

.emotion-5 {
  font-size: var(--chakra-font-sizes-md);
}

.emotion-6 {
  display: grid;
  gap: var(--chakra-spacing-2);
  margin-bottom: var(--chakra-spacing-4);
}

.emotion-9 {
  margin-top: var(--chakra-spacing-2);
}

.emotion-12 {
  margin-bottom: var(--chakra-spacing-1);
}

.emotion-23 {
  margin-top: var(--chakra-spacing-3);
}

<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <fieldset
      className="fieldset__root emotion-0"
      data-part="root"
      data-scope="fieldset"
      disabled={false}
    >
      <div
        className="fieldset__content emotion-1"
      >
        <div
          className="emotion-2"
          id="root__title"
        >
          <h5
            className="chakra-heading emotion-3"
          >
            My Field
          </h5>
          <span
            aria-orientation="horizontal"
            className="chakra-separator emotion-4"
            role="separator"
          />
        </div>
        <sup
          className="emotion-5"
          id="root__description"
        >
          a fancier description
        </sup>
        <div
          className="emotion-6"
        >
          <div
            className="emotion-7"
          >
            <div
              className="form-group field field-string"
            >
              <fieldset
                className="fieldset__root emotion-0"
                data-part="root"
                data-scope="fieldset"
                disabled={false}
              >
                <legend
                  className="fieldset__legend emotion-9"
                  data-part="legend"
                  data-scope="fieldset"
                >
                  <sup
                    className="emotion-5"
                    id="root_a__description"
                  >
                    a fancier item A description
                  </sup>
                </legend>
                <div
                  className="fieldset__content emotion-1"
                >
                  <div
                    className="chakra-field__root emotion-12"
                    data-part="root"
                    data-scope="field"
                    id="field:::rs:"
                    role="group"
                  >
                    <label
                      className="chakra-field__label emotion-13"
                      data-part="label"
                      data-scope="field"
                      htmlFor=":rs:"
                      id="field:::rs:::label"
                    >
                      My Item A
                    </label>
                    <input
                      aria-describedby="root_a__error root_a__description root_a__help"
                      autoFocus={false}
                      className="chakra-input emotion-14"
                      data-part="input"
                      data-scope="field"
                      disabled={false}
                      id="root_a"
                      name="root_a"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      readOnly={false}
                      required={false}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </fieldset>
            </div>
          </div>
          <div
            className="emotion-7"
          >
            <div
              className="form-group field field-number"
            >
              <fieldset
                className="fieldset__root emotion-0"
                data-part="root"
                data-scope="fieldset"
                disabled={false}
              >
                <legend
                  className="fieldset__legend emotion-9"
                  data-part="legend"
                  data-scope="fieldset"
                >
                  <sup
                    className="emotion-5"
                    id="root_b__description"
                  >
                    a fancier item B description
                  </sup>
                </legend>
                <div
                  className="fieldset__content emotion-1"
                >
                  <div
                    className="chakra-field__root emotion-12"
                    data-part="root"
                    data-scope="field"
                    id="field:::ru:"
                    role="group"
                  >
                    <label
                      className="chakra-field__label emotion-13"
                      data-part="label"
                      data-scope="field"
                      htmlFor=":ru:"
                      id="field:::ru:::label"
                    >
                      My Item B
                    </label>
                    <input
                      aria-describedby="root_b__error root_b__description root_b__help"
                      autoFocus={false}
                      className="chakra-input emotion-14"
                      data-part="input"
                      data-scope="field"
                      disabled={false}
                      id="root_b"
                      name="root_b"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      readOnly={false}
                      required={false}
                      step="any"
                      type="number"
                      value=""
                    />
                  </div>
                </div>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
  <div
    className="emotion-23"
  >
    <button
      className="chakra-button emotion-24"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`object fields with title and description from uiSchema show add button and fields if additionalProperties is true and not an object 1`] = `
.emotion-2 {
  margin-top: var(--chakra-spacing-1);
  margin-bottom: var(--chakra-spacing-4);
}

.emotion-5 {
  font-size: var(--chakra-font-sizes-md);
}

.emotion-6 {
  display: grid;
  gap: var(--chakra-spacing-2);
  margin-bottom: var(--chakra-spacing-4);
}

.emotion-8 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--chakra-spacing-2);
}

.emotion-12 {
  margin-bottom: var(--chakra-spacing-1);
}

.emotion-16 {
  margin-bottom: var(--chakra-spacing-1);
}

.emotion-20 {
  padding-inline: 0;
  padding-block: 0;
}

.emotion-20 :where(svg) {
  font-size: 1.2em;
}

.emotion-21 {
  justify-self: flex-end;
}

.emotion-23 {
  margin-top: var(--chakra-spacing-3);
}

<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <fieldset
      className="fieldset__root emotion-0"
      data-part="root"
      data-scope="fieldset"
      disabled={false}
    >
      <div
        className="fieldset__content emotion-1"
      >
        <div
          className="emotion-2"
          id="root__title"
        >
          <h5
            className="chakra-heading emotion-3"
          >
            My Field
          </h5>
          <span
            aria-orientation="horizontal"
            className="chakra-separator emotion-4"
            role="separator"
          />
        </div>
        <sup
          className="emotion-5"
          id="root__description"
        >
          a fancier description
        </sup>
        <div
          className="emotion-6"
        >
          <div
            className="emotion-7"
          >
            <div
              className="form-group field field-string emotion-8"
            >
              <div
                className="emotion-7"
              >
                <div
                  className="chakra-field__root emotion-10"
                  data-part="root"
                  data-scope="field"
                  id="field:::r14:"
                  role="group"
                >
                  <label
                    className="chakra-field__label emotion-11"
                    data-part="label"
                    data-scope="field"
                    htmlFor=":r14:"
                    id="field:::r14:::label"
                  >
                    additionalProperty Key
                  </label>
                  <input
                    className="chakra-input emotion-12"
                    data-part="input"
                    data-scope="field"
                    defaultValue="additionalProperty"
                    disabled={false}
                    id="root_additionalProperty-key"
                    name="root_additionalProperty-key"
                    onBlur={[Function]}
                    readOnly={false}
                    required={false}
                    type="text"
                  />
                </div>
              </div>
              <div
                className="emotion-7"
              >
                <fieldset
                  className="fieldset__root emotion-0"
                  data-part="root"
                  data-scope="fieldset"
                  disabled={false}
                >
                  <div
                    className="fieldset__content emotion-1"
                  >
                    <div
                      className="chakra-field__root emotion-16"
                      data-part="root"
                      data-scope="field"
                      id="field:::r16:"
                      role="group"
                    >
                      <label
                        className="chakra-field__label emotion-11"
                        data-part="label"
                        data-scope="field"
                        htmlFor=":r16:"
                        id="field:::r16:::label"
                      >
                        additionalProperty
                      </label>
                      <input
                        aria-describedby="root_additionalProperty__error root_additionalProperty__description root_additionalProperty__help"
                        autoFocus={false}
                        className="chakra-input emotion-18"
                        data-part="input"
                        data-scope="field"
                        disabled={false}
                        id="root_additionalProperty"
                        name="root_additionalProperty"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder=""
                        readOnly={false}
                        required={false}
                        type="text"
                        value="should appear"
                      />
                    </div>
                  </div>
                </fieldset>
              </div>
              <div
                className="emotion-7"
              >
                <button
                  aria-label="Remove"
                  className="chakra-button array-item-remove emotion-20"
                  disabled={false}
                  id="root_additionalProperty__remove"
                  onClick={[Function]}
                  title="Remove"
                  type="button"
                >
                  <svg
                    className="lucide lucide-delete"
                    fill="none"
                    height={24}
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={2}
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10 5a2 2 0 0 0-1.344.519l-6.328 5.74a1 1 0 0 0 0 1.481l6.328 5.741A2 2 0 0 0 10 19h10a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2z"
                    />
                    <path
                      d="m12 9 6 6"
                    />
                    <path
                      d="m18 9-6 6"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            className="emotion-21"
          >
            <button
              className="chakra-button object-property-expand emotion-22"
              disabled={false}
              id="root__add"
              onClick={[Function]}
              type="button"
            >
              <svg
                className="lucide lucide-plus"
                fill="none"
                height={24}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={2}
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
              Add Item
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
  <div
    className="emotion-23"
  >
    <button
      className="chakra-button emotion-22"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`object fields with title and description object 1`] = `
.emotion-2 {
  margin-top: var(--chakra-spacing-1);
  margin-bottom: var(--chakra-spacing-4);
}

.emotion-5 {
  font-size: var(--chakra-font-sizes-md);
}

.emotion-6 {
  display: grid;
  gap: var(--chakra-spacing-2);
  margin-bottom: var(--chakra-spacing-4);
}

.emotion-9 {
  margin-top: var(--chakra-spacing-2);
}

.emotion-12 {
  margin-bottom: var(--chakra-spacing-1);
}

.emotion-23 {
  margin-top: var(--chakra-spacing-3);
}

<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <fieldset
      className="fieldset__root emotion-0"
      data-part="root"
      data-scope="fieldset"
      disabled={false}
    >
      <div
        className="fieldset__content emotion-1"
      >
        <div
          className="emotion-2"
          id="root__title"
        >
          <h5
            className="chakra-heading emotion-3"
          >
            Test field
          </h5>
          <span
            aria-orientation="horizontal"
            className="chakra-separator emotion-4"
            role="separator"
          />
        </div>
        <sup
          className="emotion-5"
          id="root__description"
        >
          a test description
        </sup>
        <div
          className="emotion-6"
        >
          <div
            className="emotion-7"
          >
            <div
              className="form-group field field-string"
            >
              <fieldset
                className="fieldset__root emotion-0"
                data-part="root"
                data-scope="fieldset"
                disabled={false}
              >
                <legend
                  className="fieldset__legend emotion-9"
                  data-part="legend"
                  data-scope="fieldset"
                >
                  <sup
                    className="emotion-5"
                    id="root_a__description"
                  >
                    A description
                  </sup>
                </legend>
                <div
                  className="fieldset__content emotion-1"
                >
                  <div
                    className="chakra-field__root emotion-12"
                    data-part="root"
                    data-scope="field"
                    id="field:::rf:"
                    role="group"
                  >
                    <label
                      className="chakra-field__label emotion-13"
                      data-part="label"
                      data-scope="field"
                      htmlFor=":rf:"
                      id="field:::rf:::label"
                    >
                      A
                    </label>
                    <input
                      aria-describedby="root_a__error root_a__description root_a__help"
                      autoFocus={false}
                      className="chakra-input emotion-14"
                      data-part="input"
                      data-scope="field"
                      disabled={false}
                      id="root_a"
                      name="root_a"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      readOnly={false}
                      required={false}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </fieldset>
            </div>
          </div>
          <div
            className="emotion-7"
          >
            <div
              className="form-group field field-number"
            >
              <fieldset
                className="fieldset__root emotion-0"
                data-part="root"
                data-scope="fieldset"
                disabled={false}
              >
                <legend
                  className="fieldset__legend emotion-9"
                  data-part="legend"
                  data-scope="fieldset"
                >
                  <sup
                    className="emotion-5"
                    id="root_b__description"
                  >
                    B description
                  </sup>
                </legend>
                <div
                  className="fieldset__content emotion-1"
                >
                  <div
                    className="chakra-field__root emotion-12"
                    data-part="root"
                    data-scope="field"
                    id="field:::rh:"
                    role="group"
                  >
                    <label
                      className="chakra-field__label emotion-13"
                      data-part="label"
                      data-scope="field"
                      htmlFor=":rh:"
                      id="field:::rh:::label"
                    >
                      B
                    </label>
                    <input
                      aria-describedby="root_b__error root_b__description root_b__help"
                      autoFocus={false}
                      className="chakra-input emotion-14"
                      data-part="input"
                      data-scope="field"
                      disabled={false}
                      id="root_b"
                      name="root_b"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      readOnly={false}
                      required={false}
                      step="any"
                      type="number"
                      value=""
                    />
                  </div>
                </div>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
  <div
    className="emotion-23"
  >
    <button
      className="chakra-button emotion-24"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`object fields with title and description show add button and fields if additionalProperties is true and not an object 1`] = `
.emotion-2 {
  margin-top: var(--chakra-spacing-1);
  margin-bottom: var(--chakra-spacing-4);
}

.emotion-5 {
  font-size: var(--chakra-font-sizes-md);
}

.emotion-6 {
  display: grid;
  gap: var(--chakra-spacing-2);
  margin-bottom: var(--chakra-spacing-4);
}

.emotion-8 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--chakra-spacing-2);
}

.emotion-12 {
  margin-bottom: var(--chakra-spacing-1);
}

.emotion-16 {
  margin-bottom: var(--chakra-spacing-1);
}

.emotion-20 {
  padding-inline: 0;
  padding-block: 0;
}

.emotion-20 :where(svg) {
  font-size: 1.2em;
}

.emotion-21 {
  justify-self: flex-end;
}

.emotion-23 {
  margin-top: var(--chakra-spacing-3);
}

<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <fieldset
      className="fieldset__root emotion-0"
      data-part="root"
      data-scope="fieldset"
      disabled={false}
    >
      <div
        className="fieldset__content emotion-1"
      >
        <div
          className="emotion-2"
          id="root__title"
        >
          <h5
            className="chakra-heading emotion-3"
          >
            Test field
          </h5>
          <span
            aria-orientation="horizontal"
            className="chakra-separator emotion-4"
            role="separator"
          />
        </div>
        <sup
          className="emotion-5"
          id="root__description"
        >
          a test description
        </sup>
        <div
          className="emotion-6"
        >
          <div
            className="emotion-7"
          >
            <div
              className="form-group field field-string emotion-8"
            >
              <div
                className="emotion-7"
              >
                <div
                  className="chakra-field__root emotion-10"
                  data-part="root"
                  data-scope="field"
                  id="field:::rn:"
                  role="group"
                >
                  <label
                    className="chakra-field__label emotion-11"
                    data-part="label"
                    data-scope="field"
                    htmlFor=":rn:"
                    id="field:::rn:::label"
                  >
                    additionalProperty Key
                  </label>
                  <input
                    className="chakra-input emotion-12"
                    data-part="input"
                    data-scope="field"
                    defaultValue="additionalProperty"
                    disabled={false}
                    id="root_additionalProperty-key"
                    name="root_additionalProperty-key"
                    onBlur={[Function]}
                    readOnly={false}
                    required={false}
                    type="text"
                  />
                </div>
              </div>
              <div
                className="emotion-7"
              >
                <fieldset
                  className="fieldset__root emotion-0"
                  data-part="root"
                  data-scope="fieldset"
                  disabled={false}
                >
                  <div
                    className="fieldset__content emotion-1"
                  >
                    <div
                      className="chakra-field__root emotion-16"
                      data-part="root"
                      data-scope="field"
                      id="field:::rp:"
                      role="group"
                    >
                      <label
                        className="chakra-field__label emotion-11"
                        data-part="label"
                        data-scope="field"
                        htmlFor=":rp:"
                        id="field:::rp:::label"
                      >
                        additionalProperty
                      </label>
                      <input
                        aria-describedby="root_additionalProperty__error root_additionalProperty__description root_additionalProperty__help"
                        autoFocus={false}
                        className="chakra-input emotion-18"
                        data-part="input"
                        data-scope="field"
                        disabled={false}
                        id="root_additionalProperty"
                        name="root_additionalProperty"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder=""
                        readOnly={false}
                        required={false}
                        type="text"
                        value="should appear"
                      />
                    </div>
                  </div>
                </fieldset>
              </div>
              <div
                className="emotion-7"
              >
                <button
                  aria-label="Remove"
                  className="chakra-button array-item-remove emotion-20"
                  disabled={false}
                  id="root_additionalProperty__remove"
                  onClick={[Function]}
                  title="Remove"
                  type="button"
                >
                  <svg
                    className="lucide lucide-delete"
                    fill="none"
                    height={24}
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={2}
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10 5a2 2 0 0 0-1.344.519l-6.328 5.74a1 1 0 0 0 0 1.481l6.328 5.741A2 2 0 0 0 10 19h10a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2z"
                    />
                    <path
                      d="m12 9 6 6"
                    />
                    <path
                      d="m18 9-6 6"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            className="emotion-21"
          >
            <button
              className="chakra-button object-property-expand emotion-22"
              disabled={false}
              id="root__add"
              onClick={[Function]}
              type="button"
            >
              <svg
                className="lucide lucide-plus"
                fill="none"
                height={24}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={2}
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
              Add Item
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
  <div
    className="emotion-23"
  >
    <button
      className="chakra-button emotion-22"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`object fields with title and description with global label off additionalProperties 1`] = `
.emotion-2 {
  display: grid;
  gap: var(--chakra-spacing-6);
  margin-bottom: var(--chakra-spacing-4);
}

.emotion-4 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--chakra-spacing-2);
}

.emotion-8 {
  margin-bottom: var(--chakra-spacing-1);
}

.emotion-12 {
  margin-bottom: var(--chakra-spacing-1);
}

.emotion-15 {
  padding-inline: 0;
  padding-block: 0;
}

.emotion-15 :where(svg) {
  font-size: 1.2em;
}

.emotion-16 {
  justify-self: flex-end;
}

.emotion-18 {
  margin-top: var(--chakra-spacing-3);
}

<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <fieldset
      className="fieldset__root emotion-0"
      data-part="root"
      data-scope="fieldset"
      disabled={false}
    >
      <div
        className="fieldset__content emotion-1"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="form-group field field-string emotion-4"
            >
              <div
                className="emotion-3"
              >
                <div
                  className="chakra-field__root emotion-6"
                  data-part="root"
                  data-scope="field"
                  id="field:::r1m:"
                  role="group"
                >
                  <label
                    className="chakra-field__label emotion-7"
                    data-part="label"
                    data-scope="field"
                    htmlFor=":r1m:"
                    id="field:::r1m:::label"
                  >
                    foo Key
                  </label>
                  <input
                    className="chakra-input emotion-8"
                    data-part="input"
                    data-scope="field"
                    defaultValue="foo"
                    disabled={false}
                    id="root_foo-key"
                    name="root_foo-key"
                    onBlur={[Function]}
                    readOnly={false}
                    required={false}
                    type="text"
                  />
                </div>
              </div>
              <div
                className="emotion-3"
              >
                <fieldset
                  className="fieldset__root emotion-0"
                  data-part="root"
                  data-scope="fieldset"
                  disabled={false}
                >
                  <div
                    className="fieldset__content emotion-1"
                  >
                    <div
                      className="chakra-field__root emotion-12"
                      data-part="root"
                      data-scope="field"
                      id="field:::r1o:"
                      role="group"
                    >
                      <input
                        aria-describedby="root_foo__error root_foo__description root_foo__help"
                        autoFocus={false}
                        className="chakra-input emotion-13"
                        data-part="input"
                        data-scope="field"
                        disabled={false}
                        id="root_foo"
                        name="root_foo"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder=""
                        readOnly={false}
                        required={false}
                        type="text"
                        value="foo"
                      />
                    </div>
                  </div>
                </fieldset>
              </div>
              <div
                className="emotion-3"
              >
                <button
                  aria-label="Remove"
                  className="chakra-button array-item-remove emotion-15"
                  disabled={false}
                  id="root_foo__remove"
                  onClick={[Function]}
                  title="Remove"
                  type="button"
                >
                  <svg
                    className="lucide lucide-delete"
                    fill="none"
                    height={24}
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={2}
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10 5a2 2 0 0 0-1.344.519l-6.328 5.74a1 1 0 0 0 0 1.481l6.328 5.741A2 2 0 0 0 10 19h10a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2z"
                    />
                    <path
                      d="m12 9 6 6"
                    />
                    <path
                      d="m18 9-6 6"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            className="emotion-16"
          >
            <button
              className="chakra-button object-property-expand emotion-17"
              disabled={false}
              id="root__add"
              onClick={[Function]}
              type="button"
            >
              <svg
                className="lucide lucide-plus"
                fill="none"
                height={24}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={2}
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
              Add Item
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
  <div
    className="emotion-18"
  >
    <button
      className="chakra-button emotion-17"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`object fields with title and description with global label off object 1`] = `
.emotion-2 {
  display: grid;
  gap: var(--chakra-spacing-6);
  margin-bottom: var(--chakra-spacing-4);
}

.emotion-6 {
  margin-bottom: var(--chakra-spacing-1);
}

.emotion-13 {
  margin-top: var(--chakra-spacing-3);
}

<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <fieldset
      className="fieldset__root emotion-0"
      data-part="root"
      data-scope="fieldset"
      disabled={false}
    >
      <div
        className="fieldset__content emotion-1"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="form-group field field-string"
            >
              <fieldset
                className="fieldset__root emotion-0"
                data-part="root"
                data-scope="fieldset"
                disabled={false}
              >
                <div
                  className="fieldset__content emotion-1"
                >
                  <div
                    className="chakra-field__root emotion-6"
                    data-part="root"
                    data-scope="field"
                    id="field:::r1i:"
                    role="group"
                  >
                    <input
                      aria-describedby="root_a__error root_a__description root_a__help"
                      autoFocus={false}
                      className="chakra-input emotion-7"
                      data-part="input"
                      data-scope="field"
                      disabled={false}
                      id="root_a"
                      name="root_a"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      readOnly={false}
                      required={false}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </fieldset>
            </div>
          </div>
          <div
            className="emotion-3"
          >
            <div
              className="form-group field field-number"
            >
              <fieldset
                className="fieldset__root emotion-0"
                data-part="root"
                data-scope="fieldset"
                disabled={false}
              >
                <div
                  className="fieldset__content emotion-1"
                >
                  <div
                    className="chakra-field__root emotion-6"
                    data-part="root"
                    data-scope="field"
                    id="field:::r1k:"
                    role="group"
                  >
                    <input
                      aria-describedby="root_b__error root_b__description root_b__help"
                      autoFocus={false}
                      className="chakra-input emotion-7"
                      data-part="input"
                      data-scope="field"
                      disabled={false}
                      id="root_b"
                      name="root_b"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      readOnly={false}
                      required={false}
                      step="any"
                      type="number"
                      value=""
                    />
                  </div>
                </div>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
  <div
    className="emotion-13"
  >
    <button
      className="chakra-button emotion-14"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`object fields with title and description with global label off show add button and fields if additionalProperties is true and not an object 1`] = `
.emotion-2 {
  display: grid;
  gap: var(--chakra-spacing-6);
  margin-bottom: var(--chakra-spacing-4);
}

.emotion-4 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--chakra-spacing-2);
}

.emotion-8 {
  margin-bottom: var(--chakra-spacing-1);
}

.emotion-12 {
  margin-bottom: var(--chakra-spacing-1);
}

.emotion-15 {
  padding-inline: 0;
  padding-block: 0;
}

.emotion-15 :where(svg) {
  font-size: 1.2em;
}

.emotion-16 {
  justify-self: flex-end;
}

.emotion-18 {
  margin-top: var(--chakra-spacing-3);
}

<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <fieldset
      className="fieldset__root emotion-0"
      data-part="root"
      data-scope="fieldset"
      disabled={false}
    >
      <div
        className="fieldset__content emotion-1"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="form-group field field-string emotion-4"
            >
              <div
                className="emotion-3"
              >
                <div
                  className="chakra-field__root emotion-6"
                  data-part="root"
                  data-scope="field"
                  id="field:::r1q:"
                  role="group"
                >
                  <label
                    className="chakra-field__label emotion-7"
                    data-part="label"
                    data-scope="field"
                    htmlFor=":r1q:"
                    id="field:::r1q:::label"
                  >
                    additionalProperty Key
                  </label>
                  <input
                    className="chakra-input emotion-8"
                    data-part="input"
                    data-scope="field"
                    defaultValue="additionalProperty"
                    disabled={false}
                    id="root_additionalProperty-key"
                    name="root_additionalProperty-key"
                    onBlur={[Function]}
                    readOnly={false}
                    required={false}
                    type="text"
                  />
                </div>
              </div>
              <div
                className="emotion-3"
              >
                <fieldset
                  className="fieldset__root emotion-0"
                  data-part="root"
                  data-scope="fieldset"
                  disabled={false}
                >
                  <div
                    className="fieldset__content emotion-1"
                  >
                    <div
                      className="chakra-field__root emotion-12"
                      data-part="root"
                      data-scope="field"
                      id="field:::r1s:"
                      role="group"
                    >
                      <input
                        aria-describedby="root_additionalProperty__error root_additionalProperty__description root_additionalProperty__help"
                        autoFocus={false}
                        className="chakra-input emotion-13"
                        data-part="input"
                        data-scope="field"
                        disabled={false}
                        id="root_additionalProperty"
                        name="root_additionalProperty"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder=""
                        readOnly={false}
                        required={false}
                        type="text"
                        value="should appear"
                      />
                    </div>
                  </div>
                </fieldset>
              </div>
              <div
                className="emotion-3"
              >
                <button
                  aria-label="Remove"
                  className="chakra-button array-item-remove emotion-15"
                  disabled={false}
                  id="root_additionalProperty__remove"
                  onClick={[Function]}
                  title="Remove"
                  type="button"
                >
                  <svg
                    className="lucide lucide-delete"
                    fill="none"
                    height={24}
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={2}
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10 5a2 2 0 0 0-1.344.519l-6.328 5.74a1 1 0 0 0 0 1.481l6.328 5.741A2 2 0 0 0 10 19h10a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2z"
                    />
                    <path
                      d="m12 9 6 6"
                    />
                    <path
                      d="m18 9-6 6"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            className="emotion-16"
          >
            <button
              className="chakra-button object-property-expand emotion-17"
              disabled={false}
              id="root__add"
              onClick={[Function]}
              type="button"
            >
              <svg
                className="lucide lucide-plus"
                fill="none"
                height={24}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={2}
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
              Add Item
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
  <div
    className="emotion-18"
  >
    <button
      className="chakra-button emotion-17"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;
